--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<h1> CS460 Project  :Weather forecast by time series forecast method.</h1> 
         <h3>BY: Haraprasad Dhal(sps 18) and Ravi Prakash Singh(sps 18) </h3>
+	 <a href="https://github.com/1raviprakash/CS_ML_2021_Weather-forecast-">Github</a>
     <hr>
     <h2>Goals</h2>
     <ul>
@@ -82,7 +83,7 @@
                   <img src="eqn1.png" alt="Work Flow">  </li> <br/>
     
             <li>MA model MA(q):-Rather than using past values of the forecast variable in a regressio  n, a moving average model uses past forecast errors. <br/> 
-		  <img src="eqn2.png" alt="Work Flow"><br/>
+		<br/>  <img src="eqn2.png" alt="Work Flow"><br/> </li>
 	
         </ul>
     </p>
