--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ If a time series, has seasonal patterns, then you need to add seasonal terms and
     <hr>
 
 
- <a href="https://github.com/1raviprakash/21cs460_group19/blob/main/project_proposal.html">Github</a>
+ <a href="project_proposal.html">Github</a>
 
 
     
