--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 	
 
- <a href="project_proposal.html">Github</a>
+ <a href="project_proposal.html">Project Proposal</a>
+	
+ <a href="midsem_report.html">Midsem Report</a>
 
 
     
