--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <title>CS460-Project</title>
+	
+    <style>
+	    .project_proposal{
+	    	width:20em;
+		height:15em;
+	    	border-style:solid;
+	    	border-width:0.5em;
+		text-align:center;
+		background-color:#ccff11;    
+	    }
+	    
+    </style>	    
 </head>
 
 
@@ -11,8 +23,10 @@
 
 <body>
 	
-
- <a href="project_proposal.html">Project Proposal</a>
+<div class="project_proposal">
+ <a href="project_proposal.html"><h2>Project Proposal</a>
+	
+</div>	
 	
  <a href="midsem_report.html">Midsem Report</a>
 
