--- a/midsem_report.html
+++ b/midsem_report.html
@@ -415,7 +415,7 @@
         A simple combination of Auto regression and Moving Average model.
 	<h3>Auto Regression:</h3> Uses Past Values to make a prediction.
 	<br/>
-	<img src="AR1.png" alt="Work Flow" width="900" height="500"><br/>
+	<img src="AR1.png" alt="Work Flow"><br/>
         
         <h3>Moving Average:</h3> Uses Past errors to make a prediction.
 	<br/>
