--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CS460-Project</title>
 	
     <style>
-	    .project_proposal{
+	    .box{
 	    	width:20em;
 		height:15em;
 	    	border-style:solid;
@@ -23,13 +23,17 @@
 
 <body>
 	
-<div class="project_proposal">
+<div class="box">
  <a href="project_proposal.html"><h2>Project Proposal</a>
 	
 </div>	
 	
- <a href="midsem_report.html">Midsem Report</a>
 
+<div class="box">
+ <a href="midsem_report.html"><h2>Project Proposal</a>
+	
+</div>	
+	
 
     
 </body>
