--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	    	border-width:0.5em;
 		text-align:center;
 		background-color:#ccff11;    
+		margin:10px;    
 	    }
 	    
     </style>	    
