--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
     <style>
 	    .box{
-		padding: 15px;    
+		padding-top: 15px;    
 	    	width:20em;
 		height:15em;
 	    	border-style:solid;
