--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    	border-style:solid;
 	    	border-width:0.5em;
 		text-align:center;
-		background-color:#ccff11;    
+		background-color:blue;    
 		margin:10px;    
 	    }
 	    
@@ -32,7 +32,7 @@
 	
 
 <div class="box">
- <a href="midsem_report.html"><h2>Project Proposal</a>
+ <a href="midsem_report.html"><h2>Report up to Midsem</a>
 	
 </div>	
 	
