--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    	border-style:solid;
 	    	border-width:0.5em;
 		text-align:center;
-		background-color:blue;    
+		background-color:#aabbcc;    
 		margin:10px;    
 	    }
 	    
