--- a/midsem_report.html
+++ b/midsem_report.html
@@ -11,9 +11,12 @@
 
 
     <h2>Review of Research Papers That we read for our project:</h2>
+	<hr>
     <p>
        <ul> 
-          <li>  PAPER 1:
+          <li> 
+
+<h3>PAPER 1::</h3> 
                 ARIMA based daily weather forecasting tool: A case study for Varanasi,
                 by -  NIKITA SHIVHARE, ATUL KUMAR RAHUL, SHYAM BIHARI DWIVEDI and
                 PRABHAT KUMAR SINGH DIKSHIT.
@@ -34,10 +37,10 @@
             </ul>
 
           </li>
-
+<hr>
 
           <li>
-              PAPER 2: Time series analysis of climate variables using seasonal
+<h3>PAPER 2:</h3>  Time series analysis of climate variables using seasonal
               ARIMA approach, by -TRIPTI DIMRI , SHAMSHAD AHMAD and MOHAMMAD SHARIF
               <a href="https://www.ias.ac.in/article/fulltext/jess/129/0149">link</a>
 
@@ -63,9 +66,10 @@
 
 
           </li>
+	       <hr>
 
           <li>
-              PAPER 3: Forecasting daily meteorological time series using ARIMA and regression models,
+<h3>PAPER 3:</h3>  Forecasting daily meteorological time series using ARIMA and regression models,
               by - Małgorzata Murat, Iwona Malinowska, Magdalena Gos, and Jaromir Krzyszczak
               <a href="http://www.international-agrophysics.org/Forecasting-daily-meteorological-time-series-using-ARIMA-and-regression-models,104317,0,2.html">link</a>
               <ul>
@@ -85,8 +89,6 @@
 
 
     <hr>
-
-
 
 
 
