--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 	    	border-style:solid;
 	    	border-width:0.5em;
 		text-align:center;
-		background-color:#aabbcc;    
+		background-color:#f2a8a2;    
 		margin:10px;    
 	    }
+	    body{
 	    
+	    	background-image:url(' url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRye3p8TFdVXNcmDdX2J-wv5_StPlfSwzeZRhXMnfOJoIwN6H3A)')
+	    }
     </style>	    
 </head>
 
