--- a/midsem_report.html
+++ b/midsem_report.html
@@ -16,10 +16,10 @@
        <ul> 
           <li> 
 
-<h3>PAPER 1::</h3> 
+<h3>PAPER 1:</h3> 
                 ARIMA based daily weather forecasting tool: A case study for Varanasi,
                 by -  NIKITA SHIVHARE, ATUL KUMAR RAHUL, SHYAM BIHARI DWIVEDI and
-                PRABHAT KUMAR SINGH DIKSHIT.
+		  PRABHAT KUMAR SINGH DIKSHIT.
                 <a href="https://metnet.imd.gov.in/mausamdocs/17019_F.pdf">link</a>
             <ul>
                 <li>
@@ -32,8 +32,8 @@
                 <li>They worked out ARIMA(2,0,2) for rainfall and ARIMA(2,1,3) for temperature data.With root mean squared
                 error  values  0.0948  and  0.085  for  rainfall  data  and temperature  data  respectively.
                 This  accuray shows  that  their algorithm worked successfully.</li>
-            
-                <img src="P1flowchart.png" alt="Flow chart" style="width:40%">
+            </br>
+                <img src="P1flowchart.png" alt="Flow chart" style="width:40%"></br>
             </ul>
 
           </li>
@@ -49,8 +49,8 @@
                   Temperature  and  the  precipitation for Bhagirathi River basin(Uttarkashi and Teheri)</li>
 
                   <li>Box  -jenkins  approach  to  find  a  good  model  for  forecasting</li>
-
-                  <img src="Paper2flow.png" alt="Flow chart for paper 2" style="width:60%">
+</br>
+                  <img src="Paper2flow.png" alt="Flow chart for paper 2" style="width:60%"></br>
 
                   <li>Their result :for-Precipitation :SARIMA(0,1,1)(0,1,1,12) and for
                   Temperature:SARIMA(0,1,0)(0,1,1,12)</li>
@@ -77,9 +77,9 @@
                   <li>ARIMA with an external regressors in the form of Fourier Terms.
                   These would allow seasonal parameters to added to the Data.The Model looks like as follows:ARIMAF(p,d,q)[K]</li>
               </ul>
-
-              <img src="arimaf_eqn.png" alt="Flow chart for paper 2" style="width:70%">
-              <img src="PAPER3_TABLE.png" alt="Flow chart for paper 2" style="width:70%">
+</br>
+              <img src="arimaf_eqn.png" alt="Flow chart for paper 2" style="width:70%"></br>
+              <img src="PAPER3_TABLE.png" alt="Flow chart for paper 2" style="width:70%"></br>
               
           </li>
        </ul>
