--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	    .box{
 		padding-top: 15px;    
 	    	width:20em;
-		height:15em;
+		height:12em;
 	    	border-style:solid;
 	    	border-width:0.5em;
 		text-align:center;
@@ -39,6 +39,10 @@
 	
 </div>	
 	
+<div class="box">
+ <a href="midway_pres_cs460.pdf"><h2>Report up to Midsem pdf file</a>
+	
+</div>	
 
     
 </body>
