--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	    }
 	    body{
 	    
-	    	background-image:url(' url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRye3p8TFdVXNcmDdX2J-wv5_StPlfSwzeZRhXMnfOJoIwN6H3A)')
+	    	background-image:' url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRye3p8TFdVXNcmDdX2J-wv5_StPlfSwzeZRhXMnfOJoIwN6H3A)'
 	    }
     </style>	    
 </head>
@@ -27,6 +27,7 @@
 
 
 <body>
+<div>	
 	
 <div class="box">
  <a href="project_proposal.html"><h2>Project Proposal</a>
@@ -43,7 +44,8 @@
  <a href="midway_pres_cs460.pdf"><h2>Report up to Midsem pdf file</a>
 	
 </div>	
-
+	
+</div>
     
 </body>
 </html>
