--- a/midsem_report.html
+++ b/midsem_report.html
@@ -383,6 +383,26 @@ Our prediction for day to day average temperature using any of the above model w
 
 
 
+<h2>Codes:</h2>
+
+
+
+<ul>
+	
+	<li><a href="Monthly Average Temp Prediction ARIMA.ipynb"><h2>Monthly Average Temp Prediction ARIMA</a>
+		</li>
+
+	<li><a href="Monthly Average Temp Prediction SARIMA.ipynb"><h2>Monthly Average Temp Prediction SARIMA</a>	</li>
+
+	<li><a href="Monthly Average Temp Prediction SARIMAX (Precipitation).ipynb"><h2>Monthly Average Temp Prediction SARIMAX (Precipitation)</a>	</li>
+
+	<li><a href="Monthly Average Temp Prediction SARIMAX (Surface Pressure).ipynb"><h2>Monthly Average Temp Prediction SARIMAX (Surface Pressure)</a>	</li>
+
+
+
+</ul>
+
+
 
 
 
