--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
 
 <body>
+	
+<h2>CS460 project website</h2>
+<ul>
+	<li><h3>Student:Haraprasad Dhal(1811074 sps18)</li>
+	<li><h3>Student:Ravi prakash Singh</li>
+	<li><h3>Instructor:Dr. Subhankar Mishra</li>	
+</ul>	
 <div>	
 	
 <div class="box">
