--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	
 <h2>CS460 project website</h2>
 <ul>
-	<li><h3>Student:Haraprasad Dhal(1811074 sps18)</li>
-	<li><h3>Student:Ravi prakash Singh</li>
+	<li><h3>Student:Haraprasad Dhal(1811074 SPS-18)</li>
+	<li><h3>Student:Ravi Prakash Singh(1811122 SPS-18)</li>
 	<li><h3>Instructor:Dr. Subhankar Mishra</li>	
 </ul>	
 <div>	
