--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
  <a href="midway_pres_cs460.pdf"><h2>Report up to Midsem pdf file</a>
 	
 </div>	
+
+<div class="box">
+ <a href="final_report.html"><h2>Final Report</a>
 	
+</div>	
+
 </div>
     
 </body>
