--- a/final_report.html
+++ b/final_report.html
@@ -26,9 +26,13 @@
         </li>
         <li>Prediction of Temperature and Precipitation using Time Series Models(Midsem)</li>
         <li>Use of RNN Model in Prediction(Post Midsem)</li>
+	 <li><a href="project_proposal.html">Here is the link to project proposal </a></li>   
     </ul>
                 <img src="jaunpur_map.jpg" style="width:35%">    
     <h2 style="color: blue;">Challenge:</h2>
+	
+	<li><a href="project_proposal.html">link to project proposal </a></li>
+	
     <h2 style="color: blue;">Time Series Methods(Midsem Work)</h2>
     We Decided to use Time series models on the weather data of  Janupur and make prediction on Temperature and Precipitation Values.
      
