--- a/final_report.html
+++ b/final_report.html
@@ -134,7 +134,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
 <div class="row">
   <div class="column">
     <figure>
-  	<img src="Monthly Average Temp Prediction ARIMA.png" style="width:30%">
+  	<img src="Monthly Average Temp Prediction ARIMA.png" style="width:100%">
   	<figcaption>Monthly Average Temperature Prediction using ARIMA(4,0,4)}:
             Trained for 450 months and Tested for next 30 months. It has a RMSE of 2.935 for Mean temp being 25.051 and AIC = 1878.252.
 	 </figcaption>
@@ -144,7 +144,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
 
  <div class="column">
     <figure>
-  	<img src="Monthly Average Temp Prediction SARIMA.png" style="width:30%">
+  	<img src="Monthly Average Temp Prediction SARIMA.png" style="width:100%">
   	<figcaption><h4>Monthly Average Temp Prediction SARIMA((2,0,2),(3,0,3,12)):
                 Trained for 450 months and Tested for next 30 months.
  		It has a RMSE of 1.820 for Mean temp being 25.051 and AIC = 1456.189
@@ -153,9 +153,11 @@ We use ACF And PACF plots, which measure the correlation between current time pe
      </figure>
     
   </div>
+</div>	 
+<div class="row">	 
   <div class="column">
     <figure>
-  	<img src="Monthly Average Temp Prediction SARIMAX (surface pressure).png" style="width:30%">
+  	<img src="Monthly Average Temp Prediction SARIMAX (surface pressure).png" style="width:100%">
   	<figcaption>Monthly Average Temp Prediction SARIMAX (Surface Pressure)((2,0,2),(3,0,3,12))}:Trained for 450 months and Tested for next 30 months.
  		It has a RMSE of 1.75 for Mean temp being 25.051 and AIC = 1450.676
 	 </figcaption>
@@ -165,7 +167,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
 	 
     <div class="column">
     <figure>
-  	<img src="Monthly Average Temp Prediction SARIMAX (precipitation).png" style="width:30%">
+  	<img src="Monthly Average Temp Prediction SARIMAX (precipitation).png" style="width:100%">
   	<figcaption> Monthly Average Temp Prediction SARIMAX (Precipitation)((2,0,2),(3,0,3,12))
  		Trained for 450 months and Tested for next 30 months.
 		 It has a RMSE of 1.658 for Mean temp being 25.051 and AIC = 1405.498.
