--- a/final_report.html
+++ b/final_report.html
@@ -145,7 +145,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
  <div class="column">
     <figure>
   	<img src="Monthly Average Temp Prediction SARIMA.png" style="width:100%">
-  	<figcaption><h4>Monthly Average Temp Prediction SARIMA((2,0,2),(3,0,3,12)):
+  	<figcaption>Monthly Average Temp Prediction SARIMA((2,0,2),(3,0,3,12)):
                 Trained for 450 months and Tested for next 30 months.
  		It has a RMSE of 1.820 for Mean temp being 25.051 and AIC = 1456.189
  
@@ -157,7 +157,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
 <div class="row">	 
   <div class="column">
     <figure>
-  	<img src="Monthly Average Temp Prediction SARIMAX (Surface Pressure).png" style="width:auto">
+  	<img src="Monthly Average Temp Prediction SARIMAX (Surface Pressure).png" style="width:100%">
   	<figcaption>Monthly Average Temp Prediction SARIMAX (Surface Pressure)((2,0,2),(3,0,3,12))}:Trained for 450 months and Tested for next 30 months.
  		It has a RMSE of 1.75 for Mean temp being 25.051 and AIC = 1450.676
 	 </figcaption>
@@ -167,7 +167,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
 	 
     <div class="column">
     <figure>
-  	<img src="Monthly Average Temp Prediction SARIMAX (Precipitation).png" style="width:auto">
+  	<img src="Monthly Average Temp Prediction SARIMAX (Precipitation).png" style="width:100%">
   	<figcaption> Monthly Average Temp Prediction SARIMAX (Precipitation)((2,0,2),(3,0,3,12))
  		Trained for 450 months and Tested for next 30 months.
 		 It has a RMSE of 1.658 for Mean temp being 25.051 and AIC = 1405.498.
