--- a/final_report.html
+++ b/final_report.html
@@ -130,7 +130,7 @@ We use ACF And PACF plots, which measure the correlation between current time pe
 
 
  <h3>Predictions:</h3>
-
+Here are Plots of Temperature Prediction found from different models.<a href="midsem_report.html">Link to Midsem report.</a>
 <div class="row">
   <div class="column">
     <figure>
