--- a/final_report.html
+++ b/final_report.html
@@ -65,6 +65,7 @@ figcaption {
 	
 	<li><a href="project_proposal.html">link to project proposal </a></li>
 	
+<br/>	
     <h2 style="color: blue;">Time Series Methods(Midsem Work)</h2>
     We Decided to use Time series models on the weather data of  Janupur and make prediction on Temperature and Precipitation Values.
      
@@ -127,8 +128,8 @@ We use ACF And PACF plots, which measure the correlation between current time pe
         </ul>
 
     </p>
-
-
+<h3>Review of Papers</h3>
+<a href="midsem_report.html">Link to Midsem report.</a>
  <h3>Predictions:</h3>
 Here are Plots of Temperature Prediction found from different models.<a href="midsem_report.html">Link to Midsem report.</a>
 <div class="row">
@@ -179,5 +180,5 @@ Here are Plots of Temperature Prediction found from different models.<a href="mi
 	 
 </div>
 Time Series Based Models Worked Quite Well.Next, We wanted to try RNN Models for prediction.
-	
+<br/>	
 </body>
