--- a/final_report.html
+++ b/final_report.html
@@ -183,4 +183,6 @@ Here are Plots of Temperature Prediction found from different models.<a href="mi
 Time Series Based Models Worked Quite Well.Next, We wanted to try RNN Models for prediction.
 <br/>
 <hr>
+
+<h2 style="color:blue">RNN Model(Post Midsem)</h2>	
 </body>
