--- a/final_report.html
+++ b/final_report.html
@@ -484,7 +484,7 @@ Bidirectional LSTM layer with 100 neurons and  no hidden dense layer this time. 
               <h2>Daily</h2>
         <ul>
            <li>
-           <a href="DAILY_RNN_LSTM_DAILY_SingleLstm_HiddenDense.ipynb"><h3>Single LSTM with hidden Dense layer</h3></a>
+           <a href="DAILY_RNN_LSTM_DAILY_SingleLstm_1 HiddenDense.ipynb"><h3>Single LSTM with hidden Dense layer</h3></a>
            	
            	
            </li>
