--- a/final_report.html
+++ b/final_report.html
@@ -44,7 +44,7 @@ figcaption {
     <ul>
         <li style="color: green">Students::</li>
         <li>Haraprasad Dhal</li>
-        <li>Raviprakash Singh</li>
+        <li>Ravi Prakash Singh</li>
         <li style="color: green">Instructor::</li>
         <li>Dr. Subhankar Mishra</li>
     
