--- a/final_report.html
+++ b/final_report.html
@@ -575,9 +575,87 @@ Bidirectional LSTM layer with 100 neurons and  no hidden dense layer this time. 
     <hr>
 
 
+<h2>Summary of Results:</h2>
 
-
-
+	<table>
+		<tr>
+			<th>Sl.No</th>
+			<th>Model Type</th>
+			<th>Model</th>
+			<th>Test score (RMSE)</th>
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		
+		
+		</tr>
+		<tr>
+		
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		
+		</tr>
+		<tr>
+			<th></th>
+			<th></th>
+			<th></th>
+			<th></th>
+		
+		
+		
+		</tr>
+		
+	</table>	
 
 
 
