--- a/final_report.html
+++ b/final_report.html
@@ -574,6 +574,14 @@ Bidirectional LSTM layer with 100 neurons and  no hidden dense layer this time. 
  
     <hr>
 
+ <h2>Data Set used</h2>
+ 	<a href="rnntime.csv"><h3>Data1(Monthly)</h3></a>
+	<a href="DATA_TEMP_DATE_JA_RNN.csv"><h3>Data2(Daily)</h3></a>
+	<a href="DATA_TEMP_DATE_JA2.csv"><h3>Data3</h3></a>
+
+    <hr>
+
+
 
 <h2>Summary of Results:</h2>
 
